IDEX-2013. Fix project configuration proposal pop up.

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -209,7 +209,7 @@ codenvy.projectClosed.title = Codenvy Developer Environment Cloud
 codenvy.projectOpened.title = Codenvy | {0}
 
 projectProblem.title = Project requires configuration
-projectProblem.message = This project does not have its language type and environment set yet. Press configure to open the configuration wizard. If you are unsure of what to select, choose 'Blank Project' to decide later.
+projectProblem.message = We cannot determine what type of project this is. Pressing 'Configure' will open the project configuration wizard.
 
 closeProject.title = Stop project
 
