--- a/ide/che-core-ide-app/pom.xml
+++ b/ide/che-core-ide-app/pom.xml
@@ -326,10 +326,10 @@
                 </dependencies>
                 <configuration>
                     <dtoPackages>
-                        <package>org.eclipse.che.ide.state.dto</package>
+                        <package>org.eclipse.che.ide.statepersistance.dto</package>
                     </dtoPackages>
                     <outputDirectory>${dto-generator-out-directory}</outputDirectory>
-                    <genClassName>org.eclipse.che.ide.state.dto.DtoClientImpls</genClassName>
+                    <genClassName>org.eclipse.che.ide.statepersistance.dto.DtoClientImpls</genClassName>
                     <impl>client</impl>
                 </configuration>
             </plugin>
