--- a/platform-api/pom.xml
+++ b/platform-api/pom.xml
@@ -30,8 +30,8 @@
         <module>che-core-api-vfs</module>
         <module>che-core-api-project</module>
         <module>che-core-api-factory</module>
-        <module>che-core-api-builder</module>
-        <module>che-core-api-runner</module>
+        <!-- module>che-core-api-builder</module -->
+        <!-- module>che-core-api-runner</module -->
         <module>che-core-api-machine</module>
         <module>che-core-api-analytics</module>
         <module>che-core-api-user</module>
