--- a/platform-api-client-gwt/pom.xml
+++ b/platform-api-client-gwt/pom.xml
@@ -26,11 +26,11 @@
         <module>che-core-client-gwt-core</module>
         <module>che-core-client-gwt-analytics</module>
         <module>che-core-client-gwt-auth</module>
-        <module>che-core-client-gwt-builder</module>
+        <!--<module>che-core-client-gwt-builder</module>-->
         <module>che-core-client-gwt-account</module>
         <module>che-core-client-gwt-project</module>
         <module>che-core-client-gwt-user</module>
-        <module>che-core-client-gwt-runner</module>
+        <!--<module>che-core-client-gwt-runner</module>-->
         <module>che-core-client-gwt-vfs</module>
         <module>che-core-client-gwt-factory</module>
         <module>che-core-client-gwt-workspace</module>
