--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -207,6 +207,8 @@ refresh = Refresh
 
 codenvy.projectClosed.title = Codenvy Developer Environment Cloud
 codenvy.projectOpened.title = Codenvy | {0}
+che.projectClosed.title = Eclipse Che
+che.projectOpened.title = Eclipse Che | {0}
 
 projectProblem.title = Project requires configuration
 projectProblem.message = We cannot determine what type of project this is. Pressing 'Configure' will open the project configuration wizard.
