--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -192,7 +192,12 @@ messages.getResourcesFailed = Unable to retrieve the resources from the runner.
 messages.getProjectTypesFailed = Unable to get project types.
 messages.saveChanges = {0} has been modified. Save changes?
 messages.promptSaveChanges = Some data has been modified. Save changes?
-messages.unableOpenFile = Unable to open {0}.
+messages.unableOpenResource = Unable to open {0}.
+messages.canNotOpenFileWithoutParams=Can not open file without parameters
+messages.fileToOpenIsNotSpecified=File to open is not specified
+messages.canNotOpenNodeWithoutParams=Can not open node without parameters
+messages.nodeToOpenIsNotSpecified=Node to open is not specified
+messages.noOpenedProject=No opened project
 ############### Buttons ###############################
 ok = OK
 cancel = Cancel
