--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -193,10 +193,13 @@ messages.getProjectTypesFailed = Unable to get project types.
 messages.saveChanges = {0} has been modified. Save changes?
 messages.promptSaveChanges = Some data has been modified. Save changes?
 messages.unableOpenResource = Unable to open {0}.
+messages.unableSelectResource = Unable to select {0}.
 messages.canNotOpenFileWithoutParams=Can not open file without parameters
 messages.fileToOpenIsNotSpecified=File to open is not specified
 messages.canNotOpenNodeWithoutParams=Can not open node without parameters
+messages.canNotSelectNodeWithoutParams=Can not select node without parameters
 messages.nodeToOpenIsNotSpecified=Node to open is not specified
+messages.nodeToSelectIsNotSpecified=Node to select is not specified
 messages.noOpenedProject=No opened project
 ############### Buttons ###############################
 ok = OK
