IDEX-2536: Added Show Hidden Files Persistence Component for saving information about hidden files. If user activates show hidden files this component will remember user's choice

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -201,6 +201,7 @@ messages.canNotSelectNodeWithoutParams=Can not select node without parameters
 messages.nodeToOpenIsNotSpecified=Node to open is not specified
 messages.nodeToSelectIsNotSpecified=Node to select is not specified
 messages.noOpenedProject=No opened project
+messages.noShowHiddenFilesParam=No show hidden files parameter
 ############### Buttons ###############################
 ok = OK
 cancel = Cancel
