CDEC-201: set correct property for IDE version

--- a/platform-api/che-core-api-core/pom.xml
+++ b/platform-api/che-core-api-core/pom.xml
@@ -201,7 +201,7 @@
                             <target>
                                 <jar file="${project.build.directory}/${project.build.finalName}.jar" update="true">
                                     <manifest>
-                                        <attribute name="IDE-Version" value="${codenvy.ide.version}" />
+                                        <attribute name="IDE-Version" value="${che.core.version}" />
                                     </manifest>
                                 </jar>
                             </target>
