IDEX-2555: Added warning in the NavigateToFile suggestion box about search is case sensitive

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -58,6 +58,7 @@ navigateToFile.view.title = Navigate To File
 navigateToFile.view.file.field.title = Start enter a file name:
 navigateToFile.view.file.field.prompt = Replace one character by '?' - Replace any string by '*'
 navigateToFile.canNotOpenFile = Can not open file
+navigateToFile.searchIsCaseSensitive = Search is case sensitive
 
 ############### CreateResource ###########################
 enteringResourceName = The resource name can not be empty.
