--- a/platform-api-client-gwt/che-core-client-gwt-user/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-user/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-client-gwt-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.10.0</version>
+        <version>3.10.1-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-client-gwt-user</artifactId>
     <packaging>jar</packaging>
