--- a/platform-api/che-core-api-factory/pom.xml
+++ b/platform-api/che-core-api-factory/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-api-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.10.0</version>
+        <version>3.10.1-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-factory</artifactId>
     <packaging>jar</packaging>
