--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <groupId>org.eclipse.che.core</groupId>
     <artifactId>che-core-parent</artifactId>
-    <version>3.9.6</version>
+    <version>3.9.7-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Che Core Parent</name>
     <modules>
@@ -34,7 +34,7 @@
     <scm>
         <connection>scm:git:git@github.com:codenvy/che-core.git</connection>
         <developerConnection>scm:git:git@github.com:codenvy/che-core.git</developerConnection>
-        <tag>3.9.6</tag>
+        <tag>3.9.0</tag>
         <url>https://github.com/codenvy/che-core</url>
     </scm>
     <properties>
