--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -124,6 +124,12 @@ uploadFolderFromZip.overwrite = overwrite if folder exists
 uploadFolderFromZip.openZipFieldTitle = Zip to open
 uploadFolderFromZip.skipFirstLevel = Skip the root folder of the archive
 
+############### Download Zip ###############################
+downloadZip.project.name = Download ZIP...
+downloadZip.project.description = Download the whole project as a zip archive.
+download.item.name = Download...
+download.item.description = Download selected item.
+
 ############### Import Project ###############################
 importProjectFromLocation.name = Import From Location...
 importProjectFromLocation.description = Import project from location
