--- a/commons/che-core-commons-schedule/pom.xml
+++ b/commons/che-core-commons-schedule/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-commons-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.9.7-SNAPSHOT</version>
+        <version>3.9.7</version>
     </parent>
     <artifactId>che-core-commons-schedule</artifactId>
     <packaging>jar</packaging>
