--- a/platform-api/pom.xml
+++ b/platform-api/pom.xml
@@ -37,6 +37,7 @@
         <module>che-core-api-workspace</module>
         <module>che-core-api-account</module>
         <module>che-core-api-auth</module>
+        <module>che-core-api-git</module>
         <module>che-core-api-infrastructure-local</module>
     </modules>
     <properties>
