--- a/commons/che-core-commons-xml/pom.xml
+++ b/commons/che-core-commons-xml/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-commons-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.10.1-SNAPSHOT</version>
+        <version>3.10.1-RC-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-commons-xml</artifactId>
     <packaging>jar</packaging>
