--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <groupId>org.eclipse.che.core</groupId>
     <artifactId>che-core-parent</artifactId>
-    <version>3.10.1-SNAPSHOT</version>
+    <version>3.10.1-RC-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Che Core Parent</name>
     <modules>
