IDEX-2674 add action for content assist (ctrl+space)

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -183,6 +183,7 @@ action.findAction.description=Find Action
 action.findAction.title=Find Action by name
 action.showHiddenFiles.title = Show/Hide Hidden Files
 action.showHiddenFiles.description = Show/Hide Hidden Files
+action.completions.title = Content Assist
 
 ############### Redirect Actions ###############################
 action.redirectToHelp.title = Codenvy Help
