IDEX-2487 Added support of Websocket 1.1 and Tomcat 8

--- a/platform-api/che-core-api-builder/pom.xml
+++ b/platform-api/che-core-api-builder/pom.xml
@@ -62,6 +62,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>${javax.websocket.api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${ch.qos.logback.version}</version>
