[maven-release-plugin] prepare release 3.11.3

--- a/platform-api-client-gwt/che-core-client-gwt-account/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-account/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-client-gwt-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.11.3-SNAPSHOT</version>
+        <version>3.11.3</version>
     </parent>
     <artifactId>che-core-client-gwt-account</artifactId>
     <packaging>jar</packaging>
