IDEX-2730: Added ability to configure compiler -> Error/Warnings section

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -10,7 +10,6 @@
 #
 
 ############### CreateProjectFromTemplateForm ###############
-createProject.warningTitle = Warning
 noIncorrectProjectNameMessage = Project name must contain only Latin letters, digits or these following special characters -._
 createProjectFromTemplate.project.exists = Project <b>{0}</b> already exists.
 createProjectFromTemplate.nameField = Name:
@@ -135,7 +134,6 @@ openFileFieldTitle = File to open
 ############### Upload Folder from Zip ###############################
 uploadFolderFromZip.name = Upload Folder From Zip...
 uploadFolderFromZip.description = Upload folder from zip
-uploadFolderFromZip.title = Folder upload
 uploadFolderFromZip.overwrite = overwrite if folder exists
 uploadFolderFromZip.openZipFieldTitle = Zip to open
 uploadFolderFromZip.skipFirstLevel = Skip the root folder of the archive
@@ -185,19 +183,6 @@ action.showHiddenFiles.title = Show/Hide Hidden Files
 action.showHiddenFiles.description = Show/Hide Hidden Files
 action.completions.title = Content Assist
 
-############### Redirect Actions ###############################
-action.redirectToHelp.title = Codenvy Help
-action.redirectToHelp.description = Open Help window
-action.redirectToHelp.url = http://docs.codenvy.com/
-
-action.redirectToForums.title = Forums
-action.redirectToForums.description = Open Forums window
-action.redirectToForums.url = https://groups.google.com/a/codenvy.com/forum/#!forum/codenvy/
-
-action.redirectToFeedback.title = Feedback / Feature Vote
-action.redirectToFeedback.description = Open Feedback window
-action.redirectToFeedback.url = https://codenvy.uservoice.com/
-
 ############### NewResource ###############################
 newResource.title = New {0}
 newResource.label = Enter a new {0} name:
@@ -208,12 +193,6 @@ messages.changesMayBeLost = You have unsaved files, that may be lost!
 messages.allFilesSaved = All files saved successfully
 messages.someFilesCanNotBeSaved = Some files can not be saved
 messages.appWillBeStopped = Application <b>{0}</b> is currently running and will be stopped if you close window.
-messages.workspaceRamLessRequiredRam = Your new project requires <b>{0}</b> MB RAM, but the workspace hosting this project only has <b>{1}</b> MB RAM. \
-   Project creation successful, but Runners will encounter issues.
-messages.updateProjectWorkspaceRamLessRequired = Your project requires <b>{0}</b> MB RAM, but the workspace hosting this project only has <b>{1}</b> MB RAM. \
-  Runners will encounter issues.
-messages.getResourcesFailed = Unable to retrieve the resources from the runner.
-messages.getProjectTypesFailed = Unable to get project types.
 messages.saveChanges = {0} has been modified. Save changes?
 messages.promptSaveChanges = Some data has been modified. Save changes?
 messages.unableOpenResource = Unable to open {0}.
@@ -240,8 +219,6 @@ refresh = Refresh
 projectProblem.title = Project requires configuration
 projectProblem.message = We cannot determine what type of project this is. Pressing 'Configure' will open the project configuration wizard.
 
-closeProject.title = Stop project
-
 askWindow.close.title = Close
 
 ############## Outline ######################
@@ -255,3 +232,6 @@ privacy.tooltip.publicHeader=Public Project
 privacy.tooltip.publicMessage=Anyone can open this project and<br/> view its content
 privacy.tooltip.privateHeader=Private Project
 privacy.tooltip.privateMessage=Only those who have been granted<br/> permissions may open this project
+
+############## Settings ####################
+project.settings.title=Project Settings
