IDEX-2730: Fixed notes

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -234,4 +234,4 @@ privacy.tooltip.privateHeader=Private Project
 privacy.tooltip.privateMessage=Only those who have been granted<br/> permissions may open this project
 
 ############## Settings ####################
-project.settings.title=Project Settings
+project.settings.title=Settings
