moved GitServiceClient to che-core-client-gwt-git, fixed version of parent native git

--- a/che-core-git-impl-native/pom.xml
+++ b/che-core-git-impl-native/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.11.2-SNAPSHOT</version>
+        <version>3.11.4-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-git-impl-native</artifactId>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-git</artifactId>
-            <version>${che.core.version}</version>
+            <version>${project.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
