IDEX-2732: Fixed incorrected message when we delete module from maven project

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -91,6 +91,7 @@ deleteNodeDialogQuestion = Are you sure you want to delete \"{0}\"?
 deleteFileDialogQuestion = Are you sure you want to delete file \"{0}\"?
 deleteFolderDialogQuestion = Are you sure you want to delete folder \"{0}\"?
 deleteProjectDialogQuestion = Are you sure you want to delete project \"{0}\"?
+deleteModuleDialogQuestion = Are you sure you want to delete module \"{0}\"?
 deleteMultipleDialogMessage = Are you sure you want to delete the following files?
 
 stopProcessesBeforeDeletingProject = You should stop all running processes associated with this project before deleting it
