IDEX-2743 Can not delete any project on SDK

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -91,7 +91,7 @@ deleteNodeDialogQuestion = Are you sure you want to delete \"{0}\"?
 deleteFileDialogQuestion = Are you sure you want to delete file \"{0}\"?
 deleteFolderDialogQuestion = Are you sure you want to delete folder \"{0}\"?
 deleteProjectDialogQuestion = Are you sure you want to delete project \"{0}\"?
-deleteMultipleDialogMessage = Are you sure you want to delete the following files?
+deleteMultipleDialogMessage = Are you sure you want to delete the following?
 
 stopProcessesBeforeDeletingProject = You should stop all running processes associated with this project before deleting it
 
@@ -215,6 +215,7 @@ close = Close
 save = Save
 apply = Apply
 refresh = Refresh
+delete = Delete
 
 projectProblem.title = Project requires configuration
 projectProblem.message = We cannot determine what type of project this is. Pressing 'Configure' will open the project configuration wizard.
