IDEX-2839: added implementation for store data to file system

--- a/platform-api/che-core-api-infrastructure-local/pom.xml
+++ b/platform-api/che-core-api-infrastructure-local/pom.xml
@@ -61,5 +61,11 @@
             <artifactId>che-core-commons-inject</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${org.testng.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
