IDEX-2972: fixed problems with GitService

--- a/platform-api-client-gwt/che-core-client-gwt-git/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-git/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>che-core-ide-ui</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.plugin</groupId>
+            <artifactId>che-plugin-machine-ext-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
