IDEX-2790. Add loader with initialize extensions, start workspace and dev machine information.

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -205,6 +205,11 @@ messages.canNotSelectNodeWithoutParams=Can not select node without parameters
 messages.nodeToOpenIsNotSpecified=Node to open is not specified
 messages.nodeToSelectIsNotSpecified=Node to select is not specified
 messages.noOpenedProject=No opened project
+messages.startingMachine=Starting machine \"{0}\"
+messages.startingOperation=Starting {0}
+messages.operationsCompleted=The operations completed!
+messages.gettingWorkspace=Getting workspace
+messages.creatingWorkspace=Creating workspace
 ############### Buttons ###############################
 ok = OK
 cancel = Cancel
